Fixed chevo position on mobile

--- a/css/pc-nav.css
+++ b/css/pc-nav.css
@@ -126,5 +126,3 @@ div.navBarMobile-menu > div {
 	height:0px; 
 	transition:height 0.3s ease;
 }
-
-.test{}
